# qcs

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .postgres
.github/workflows/: ci.yml
app/api/v1/: urls.py
app/api/v1/files/: __init__.py  serializers.py  views.py
app/api/v1/report/: __init__.py  serializers.py  views.py
app/contrib/sites/migrations/: 0001_initial.py  0003_set_site_domain_and_name.py
app/files/: admin.py  constants.py  forms.py  models.py
app/files/migrations/: 0001_initial.py  0002_initial.py  0003_remove_codefile_modified.py
app/frontend/: urls.py  views.py
app/notifications/: tasks.py
app/reports/: constants.py  models.py  service.py  tasks.py
app/reports/migrations/: 0001_initial.py  0002_initial.py  0003_remove_report_modified_report_is_sent.py
app/templates/: base.html
app/templates/account/: email.html  login.html  logout.html  password_change.html
app/templates/pages/: home.html  report.html  report_email.html
app/templates/users/: user_detail.html
app/users/: admin.py  apps.py  forms.py  models.py
app/users/migrations/: 0001_initial.py
app/users/tests/: test_drf_views.py
app/utils/logger/: __init__.py  static_filter.py
compose/production/traefik/: traefik.yml
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  local.py  production.py  test.py
docker/app/: Dockerfile  entrypoint  start
docker/app/celery/flower/: start
docker/traefik/: Dockerfile  traefik.yml
fixtures/: tasks.json
requirements/: base.txt  local.txt
